--- a/Lesson assignment/გაკვეთილის დავალება 2/HW2.html
+++ b/Lesson assignment/გაკვეთილის დავალება 2/HW2.html
@@ -8,7 +8,7 @@
     <body>
         <div id="div-1">
             <nav>
-                <h1 class="color-T" id="h1-1">Horror Quest</h1>
+                <h1 class="color-T" id="h1-1">Best Time For First Time Travels</h1>
                 <ul>
                   <li><a href="#home">Home</a></li>
                   <li><a href="#contact">Contact</a></li>
@@ -16,8 +16,7 @@
             </nav>
         </div>
         <div id="home">
-            <p>Think first before you want to come here, in this place you will not have a mother and no one can protect you, you will be alone in the dark,<br>What's worse than that? ... when you are not alone in the dark!<br><br><br><br>
-                What to do in the quest<br>DANGEROUS QUEST This place is an underground 7-room's location where you have to find a way out and try not to get caught by a<br> murderous psycho in the dark or no one knows what will happen to you (no player was harmed in this place)<br><br><br><br>A maximum of 2 people can participate in the quest<br>When 2 people participate in the quest, then the keys are doubled<br><br><br><br><br>What to do to get out of the quest location<br>First you have to collect 4 keys which are hidden in all 7 rooms<br>But this is not easy to do for two reasons.<br>The first reason is the darkness, the location is so dark that you have to be careful when walking and running away from the maniac.<br>The second reason is, of course, the actor, who is dressed in a maniac costume and follows you with a chainsaw in his hands, and who knows the location like the back of his hand and hidden exits.</p>
+            <p>The best deals for the first time in transport<br>There are many places in Georgia where you can see beautiful places<br>Georgia has beautiful seas, mountains, rivers and lakes<br>For example, the city by the sea, which leaves you with the impression of the most beautiful city, is certainly Batumi<br>There are some non-standard buildings and a beach where there are many ships, both small and large, through which you can see the sea below you.<br>Kobuleti is also a beautiful city by the sea, where there is a sea of ​​sand, not down like in Batumi.</p>
   
       
         <div id="contact">
