--- a/Lesson assignment/გაკვეთილის დავალება 2/HW2.html
+++ b/Lesson assignment/გაკვეთილის დავალება 2/HW2.html
@@ -20,13 +20,15 @@
   
       
         <div id="contact">
+
             <h2 class="color-I" id="h2-3">Contact Me</h2>
 
             <img id="call" src="./call.png">
             <h3 class="color-T" id="h3-1">+995 555 500 718</h3>
+            <h4><img id="car" src="car.jpg"></h4>
 
 
-            <a href="https://www.facebook.com/nika.museridze.399/"><img id="facebook" src="./facebook.jpg"></a>
+            <a href="https://www.facebook.com/Luka.Tskhvaradze"><img id="facebook" src="./facebook.jpg"></a>
 
         </div>
         <div id="div-2">
