--- a/Lesson assignment/გაკვეთილის დავალება 2/HW2.html
+++ b/Lesson assignment/გაკვეთილის დავალება 2/HW2.html
@@ -8,7 +8,7 @@
     <body>
         <div id="div-1">
             <nav>
-                <h1 class="color-T" id="h1-1">Best Time For First Time Travels</h1>
+                <h1 class="color-T" id="h1-1">Lulini • Transport </h1>
                 <ul>
                   <li><a href="#home">Home</a></li>
                   <li><a href="#contact">Contact</a></li>
