--- a/Html-css/day30/HW3.html
+++ b/Html-css/day30/HW3.html
@@ -35,20 +35,15 @@
 </head>
 <body>
 
-    <h2>Member Details Form</h2>
+
 
     <form>
+        
+
+        <label for="address">Email Address:</label>
+        <input type="text" id="address" name="address" required>
         <label for="memberID">Member ID:</label>
         <input type="text" id="memberID" name="memberID" required>
-
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required>
-
-        <label for="phone">Phone:</label>
-        <input type="tel" id="phone" name="phone" pattern="[0-9]{10}"  required>
-
-        <label for="address">Address:</label>
-        <input type="text" id="address" name="address" required>
 
         <label for="status">Status:</label>
         <select id="status" name="status" required>
@@ -56,7 +51,7 @@
             <option value="inactive">Inactive</option>
         </select>
 
-        <button type="submit">Submit</button>
+        <button type="submit">Sing in</buttoing >
     </form>
 
 </body>
